--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptResumenRequerimiento.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/pagoproveedor/rptResumenRequerimiento.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="29201a69-e491-4b63-8141-e362fa8536d7">
-	<property name="ireport.zoom" value="1.6500000000000004"/>
+	<property name="ireport.zoom" value="1.3636363636363638"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="48"/>
+	<property name="ireport.y" value="26"/>
 	<parameter name="pDepartamental" class="java.lang.String">
 		<defaultValueExpression><![CDATA["SAN MIGUEL"]]></defaultValueExpression>
 	</parameter>
@@ -72,10 +72,6 @@ GROUP BY
 	</background>
 	<title>
 		<band height="191" splitType="Stretch">
-			<image>
-				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="263" y="20" width="47" height="47"/>
-				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo.png"]]></imageExpression>
-			</image>
 			<staticText>
 				<reportElement uuid="47f6b448-aa5d-46d7-9cb6-593b23d762e9" x="40" y="111" width="496" height="15"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -84,7 +80,7 @@ GROUP BY
 				<text><![CDATA[RESUMEN DEL REQUERIMIENTO DE TRANSFERENCIA DE FONDOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006" x="40" y="73" width="496" height="38"/>
+				<reportElement uuid="8b6881fa-9b39-4e73-ad7b-8136abdf7006" x="26" y="73" width="496" height="38"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="10" isBold="true"/>
 					<paragraph lineSpacing="Proportional" lineSpacingSize="1.3"/>
@@ -122,12 +118,26 @@ GROUP BY
 				<textFieldExpression><![CDATA[$F{NUMERO_NIT}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa" x="488" y="20" width="48" height="21"/>
+				<reportElement uuid="244b42d1-89a0-445e-a95f-4be5f24ba3aa" x="522" y="165" width="48" height="21"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Arial" size="10" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[String.format("%03d", $F{CORRELATIVO_GENERAL}.intValue())]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="21" width="60" height="60"/>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
+			</image>
+			<image hAlign="Right">
+				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="423" y="18" width="149" height="63"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
