--- a/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/oferta/rptOfertaGlobalProv2021.jrxml
+++ b/paquescolar-web/src/main/resources/sv/gob/mined/apps/reportes/oferta/rptOfertaGlobalProv2021.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0bd311a0-41c1-46a5-aa9a-a7ec3ef35721">
 	<property name="ireport.zoom" value="1.9487171000000028"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="47"/>
+	<property name="ireport.y" value="813"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -94,6 +94,8 @@
 	<parameter name="pRubro" class="java.lang.String"/>
 	<parameter name="pEscudo" class="java.lang.String"/>
 	<parameter name="pIdRubro" class="java.lang.Integer"/>
+	<parameter name="pCorreoPersona" class="java.lang.String"/>
+	<parameter name="pIdGestion" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -144,7 +146,7 @@
 		<groupFooter>
 			<band height="61">
 				<textField>
-					<reportElement uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac" x="6" y="0" width="317" height="20"/>
+					<reportElement x="6" y="0" width="317" height="20" uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac"/>
 					<textElement>
 						<font fontName="Arial"/>
 					</textElement>
@@ -152,7 +154,7 @@
 " son:"]]></textFieldExpression>
 				</textField>
 				<componentElement>
-					<reportElement uuid="16ca16b2-3245-4f42-b39a-9b8d7101457b" key="table 1" style="table 1" x="65" y="20" width="440" height="41"/>
+					<reportElement key="table 1" style="table 1" x="65" y="20" width="440" height="41" uuid="16ca16b2-3245-4f42-b39a-9b8d7101457b"/>
 					<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 						<datasetRun subDataset="dsMunInt" uuid="2eb2923d-6d3d-42a2-aaf7-fb722a43cc35">
 							<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstMunIntOfertaGlobal})]]></dataSourceExpression>
@@ -160,7 +162,7 @@
 						<jr:column width="150" uuid="c2666e7c-9206-4ed4-ba44-76db175e37fc">
 							<jr:columnHeader style="table_TD" height="16" rowSpan="1">
 								<staticText>
-									<reportElement uuid="5d0aa765-05ad-4dbe-96a8-69738e6a6094" x="0" y="0" width="150" height="16"/>
+									<reportElement x="0" y="0" width="150" height="16" uuid="5d0aa765-05ad-4dbe-96a8-69738e6a6094"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -169,7 +171,7 @@
 							</jr:columnHeader>
 							<jr:detailCell style="table 1_TD" height="14" rowSpan="1">
 								<textField isStretchWithOverflow="true">
-									<reportElement uuid="12539dbc-158a-4a83-83e0-f5493ebaff24" isPrintRepeatedValues="false" x="3" y="0" width="147" height="14" isPrintWhenDetailOverflows="true"/>
+									<reportElement isPrintRepeatedValues="false" x="3" y="0" width="147" height="14" isPrintWhenDetailOverflows="true" uuid="12539dbc-158a-4a83-83e0-f5493ebaff24"/>
 									<textElement verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -180,7 +182,7 @@
 						<jr:columnGroup width="273" uuid="3ccdc781-3b67-4d55-8700-b8d84ac5af68">
 							<jr:columnHeader height="16" rowSpan="1">
 								<staticText>
-									<reportElement uuid="57351da3-0c13-4d5c-920f-c53a3ce992b1" x="0" y="0" width="273" height="16"/>
+									<reportElement x="0" y="0" width="273" height="16" uuid="57351da3-0c13-4d5c-920f-c53a3ce992b1"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle">
 										<font fontName="Arial" size="8"/>
 									</textElement>
@@ -190,7 +192,7 @@
 							<jr:column width="273" uuid="7123efa7-f0ee-42f2-aacf-0c43707a9f52">
 								<jr:detailCell style="table 1_TD" height="14" rowSpan="1">
 									<textField isStretchWithOverflow="true">
-										<reportElement uuid="fcbe26ef-92b6-44b7-a898-a9c81c6cbaba" x="3" y="0" width="270" height="14" isPrintWhenDetailOverflows="true"/>
+										<reportElement x="3" y="0" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="fcbe26ef-92b6-44b7-a898-a9c81c6cbaba"/>
 										<textElement verticalAlignment="Middle">
 											<font fontName="Arial" size="8"/>
 										</textElement>
@@ -213,21 +215,21 @@
 	<title>
 		<band height="187" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="54570f10-9883-46e5-b0c2-c161f0858a49" x="233" y="29" width="100" height="20"/>
+				<reportElement x="233" y="29" width="100" height="20" uuid="54570f10-9883-46e5-b0c2-c161f0858a49"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<text><![CDATA[OFERTA GLOBAL]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="30872ab0-7e72-470e-90b9-4a6263559ea4" x="170" y="53" width="226" height="20"/>
+				<reportElement x="170" y="53" width="226" height="20" uuid="30872ab0-7e72-470e-90b9-4a6263559ea4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["DEPARTAMENTO: "+$F{departamento}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="70c75c21-8c80-4df6-97b9-76f6f59e541e" x="6" y="109" width="558" height="78"/>
+				<reportElement x="6" y="109" width="558" height="78" uuid="70c75c21-8c80-4df6-97b9-76f6f59e541e"/>
 				<textElement textAlignment="Justified" markup="styled">
 					<font fontName="Arial"/>
 				</textElement>
@@ -238,14 +240,14 @@
 "\n\nb) Los precios con los que participaré en el proceso de contratación son los siguientes:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="30872ab0-7e72-470e-90b9-4a6263559ea4" x="123" y="76" width="321" height="20"/>
+				<reportElement x="123" y="76" width="321" height="20" uuid="30872ab0-7e72-470e-90b9-4a6263559ea4"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Arial" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["PROGRAMA \"PAQUETE ESCOLAR "+ $F{anho}+"\""]]></textFieldExpression>
 			</textField>
 			<image hAlign="Right">
-				<reportElement uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295" key="image-2" x="423" y="0" width="149" height="63"/>
+				<reportElement key="image-2" x="423" y="0" width="149" height="63" uuid="7b533e97-debd-4fc6-9ca5-d774a9ae2295"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -255,7 +257,7 @@
 				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"logo_mined_rpt.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf" x="0" y="0" width="47" height="47"/>
+				<reportElement x="0" y="0" width="47" height="47" uuid="636b5c65-5cad-4348-bc81-43d99c89e6cf"/>
 				<imageExpression><![CDATA[$P{pEscudo}+File.separator+"escudo_rpt.png"]]></imageExpression>
 			</image>
 		</band>
@@ -269,7 +271,7 @@
 	<detail>
 		<band height="61" splitType="Stretch">
 			<componentElement>
-				<reportElement uuid="2e043f5e-df76-474b-956f-fda6a0692d47" key="table" style="table" x="40" y="0" width="496" height="50"/>
+				<reportElement key="table" style="table" x="40" y="0" width="496" height="50" uuid="2e043f5e-df76-474b-956f-fda6a0692d47"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="dsPrecios" uuid="17adf11c-89cb-4186-b1e6-3d20b108ce0c">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{lstDetItemOfertaGlobal})]]></dataSourceExpression>
@@ -277,7 +279,7 @@
 					<jr:column width="285" uuid="0396c88a-a072-46c8-9884-6838a5014a02">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement uuid="97e0c53e-d118-408b-b2a3-1f79d19ccf2d" x="0" y="0" width="285" height="22"/>
+								<reportElement x="0" y="0" width="285" height="22" uuid="97e0c53e-d118-408b-b2a3-1f79d19ccf2d"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -286,7 +288,7 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField isStretchWithOverflow="true">
-								<reportElement uuid="777ca4c3-d7d2-46ea-9099-7f56ad535a60" x="3" y="0" width="279" height="14" isPrintWhenDetailOverflows="true"/>
+								<reportElement x="3" y="0" width="279" height="14" isPrintWhenDetailOverflows="true" uuid="777ca4c3-d7d2-46ea-9099-7f56ad535a60"/>
 								<textElement verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -297,7 +299,7 @@
 					<jr:column width="76" uuid="84dc2fd2-5413-4184-a957-2bad60f3dcbb">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement uuid="b59c2d47-dda2-44cc-b9dc-3f8f83f99ce2" x="0" y="0" width="75" height="22"/>
+								<reportElement x="0" y="0" width="75" height="22" uuid="b59c2d47-dda2-44cc-b9dc-3f8f83f99ce2"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -306,7 +308,7 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField pattern="###0.00;-###0.00">
-								<reportElement uuid="1d8bf5d0-899a-4f62-985a-992d5b87cbd5" x="0" y="0" width="72" height="14"/>
+								<reportElement x="0" y="0" width="72" height="14" uuid="1d8bf5d0-899a-4f62-985a-992d5b87cbd5"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -317,7 +319,7 @@
 					<jr:column width="78" uuid="8b9830c0-7808-44fd-ab78-aeec43a676e6">
 						<jr:columnHeader style="table_TD" height="22" rowSpan="1">
 							<staticText>
-								<reportElement uuid="609fbeab-2755-4965-9c0c-4930354e978f" x="0" y="0" width="78" height="22"/>
+								<reportElement x="0" y="0" width="78" height="22" uuid="609fbeab-2755-4965-9c0c-4930354e978f"/>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -326,7 +328,7 @@
 						</jr:columnHeader>
 						<jr:detailCell style="table_TD" height="14" rowSpan="1">
 							<textField pattern="###0.00;-###0.00" isBlankWhenNull="false">
-								<reportElement uuid="95291b06-5729-49f3-8363-e5ea2016d910" x="0" y="0" width="75" height="14"/>
+								<reportElement x="0" y="0" width="75" height="14" uuid="95291b06-5729-49f3-8363-e5ea2016d910"/>
 								<textElement textAlignment="Right" verticalAlignment="Middle">
 									<font fontName="Arial" size="8"/>
 								</textElement>
@@ -344,33 +346,35 @@
 	<pageFooter>
 		<band height="112" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="30130241-26b2-4a48-9249-b2264ed7729e" x="294" y="49" width="15" height="18"/>
+				<reportElement x="294" y="36" width="15" height="18" uuid="30130241-26b2-4a48-9249-b2264ed7729e"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="9"/>
 				</textElement>
 				<text><![CDATA[F.]]></text>
 			</staticText>
 			<line>
-				<reportElement uuid="8c59c8ab-c946-4aa4-b327-bbcbb70c6bdc" x="311" y="66" width="250" height="1"/>
+				<reportElement x="311" y="53" width="250" height="1" uuid="8c59c8ab-c946-4aa4-b327-bbcbb70c6bdc"/>
 			</line>
 			<textField>
-				<reportElement uuid="19da908d-3200-4752-91da-73acd0e9e280" x="75" y="26" width="489" height="18"/>
+				<reportElement x="75" y="19" width="489" height="18" uuid="19da908d-3200-4752-91da-73acd0e9e280"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle" markup="none">
 					<font fontName="Arial" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Lugar y fecha: "+$P{pLugar}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Lugar y fecha de la presentación de Oferta: "+$P{pLugar}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac" x="40" y="69" width="521" height="43"/>
+				<reportElement x="40" y="56" width="521" height="56" uuid="16c6cc98-10a9-4059-914b-9c0dba3b2fac"/>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nombreRepresentante}+
-"\nNombre y Firma del Proveedor o Representante Legal\n"+
-"No DUI de la Persona Proveedora o Representante Legal: "+ $F{duiRepresentante}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Oferta presentada por: "+$F{nombreRepresentante}+"\n"+
+"Proveedor o Representante Legal\n"+
+"No DUI de la Persona Proveedora o Representante Legal: "+ $F{duiRepresentante}+"\n"+
+"Correo Electrónico: "+$P{pCorreoPersona}+"\n"+
+"No. de Gestión: "+$P{pIdGestion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="c0fd3cfa-0584-4128-9722-d8ffc37a1644" x="-1" y="101" width="100" height="11"/>
+				<reportElement x="-1" y="101" width="100" height="11" uuid="c0fd3cfa-0584-4128-9722-d8ffc37a1644"/>
 				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
