--- a/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
+++ b/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
@@ -19,54 +19,40 @@
         <h:outputScript name="funciones.js" library="js" />
     </h:head>
 
-    <h:body styleClass="landing-body" style="max-width: 1024px !important; margin: 0 auto;">
+    <h:body styleClass="#{guestPreferences.inputStyleClass}">
+        <div class="layout-wrapper #{guestPreferences.menuMode} ">
 
-        <div class="landing-wrapper" style="background-color: white !important">
-            <div id="header" class="topbar">
-                <div class="header-top">
-                    <h:panelGrid columns="2" style="width: 100%" columnClasses="col3_left,col9_left">
+            <div class="topbar">
+                <div class="topbar-wrapper">
+                    <div class="topbar-left">
                         <h:graphicImage name="images/mined-logo.svg" style="height:100px; margin-right: 20px; font-family: Bembo Std;"/>
-                        <p:outputPanel>
+                    </div>
+                    <div class="topbar-right">
+                        <p:outputPanel style="float: left !important;">
                             <h:outputText style="font-family: Bembo Std !important; font-size: 30px" value="Proyectos de Cooperación" /><br/>
                             <h:outputText style="font-family: Bembo Std !important; font-size: 18px;" value="Dirección Nacional de Planificación" />
                         </p:outputPanel>
-                    </h:panelGrid>
-
-                    <ui:insert name="titulo"/>
+                    </div>
                 </div>
             </div>
 
-            <h:form prependId="false">
-                <p:messages id="growl" closable="true" escape="false" showDetail="true">
-                    <p:autoUpdate />
-                </p:messages>
-                <ui:insert name="contenido"/>
+            <div class="layout-main">
 
-                <p:ajaxStatus>
-                    <f:facet name="default">
+                <div class="layout-content" >
+                    <h:form prependId="false">
+                        <ui:insert name="contenido"/>
+                    </h:form>
+                </div>
 
-                    </f:facet>
-                    <f:facet name="start">
-                        <div id="div_modal" class="layout-content ui-widget-overlay ui-dialog-mask" style="z-index: 1000;"></div>
-                        <div id="ajax_gif" class="ui-tooltip-text ui-corner-all ui-shadow">
-                            <i class="fa fa-refresh fa-spin ajax-loader" aria-hidden="true" 
-                               style="color: #349ffb; font-size: 36px; display: block;  position: relative;  top: 18%;  transform: translateY(-18%);"></i>
-                        </div>
-                    </f:facet>
-
-                    <f:facet name="complete">
-                        <h:outputText value="" />
-                    </f:facet>
-                </p:ajaxStatus>
-            </h:form>
+            </div>        
         </div>
 
-
-
         <h:outputStylesheet name="main.css" library="css" />
-        <h:outputStylesheet name="css/animate.css" library="paradise-layout" />
-        <h:outputStylesheet name="css/components.css" library="paradise-layout" />
+        <h:outputStylesheet name="css/primeicons.css" library="paradise-layout" />
+        <h:outputStylesheet name="css/primeflex.min.css" library="paradise-layout" />
+        <h:outputStylesheet name="css/demo.css" library="demo" />
+
+        <h:outputStylesheet name="css/nanoscroller.css" library="paradise-layout" />
         <h:outputStylesheet name="css/layout-#{guestPreferences.layout}.css" library="paradise-layout" />
     </h:body>
-
 </html>
