--- a/cooperacion-web/src/main/webapp/resources/template/topbar.xhtml
+++ b/cooperacion-web/src/main/webapp/resources/template/topbar.xhtml
@@ -21,8 +21,12 @@
                     <br/><p:outputLabel style="font-size: 14px; " value="Cooperación a Centros Educativos"/>
                 </div>
             </div>
-            <div id="user-display" style="padding-top: 1px; text-align: right;">
-
+            <div class="topbar-right">
+                <div id="user-display" style="padding-top: 1px; text-align: right;">
+                    <p:commandLink action="#{guestPreferences.logout()}">
+                        <i class="pi pi pi-fw pi-power-off" style="font-size: 18px;" />
+                    </p:commandLink>
+                </div>
             </div>
         </div>
     </div>
